[package]
name = "range_header"
description = "HTTP Range header parser"
version = "0.2.0"
license = "MIT"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
repository = "https://github.com/DCjanus/range_header"
edition = "2018"
exclude = [
    "./.travis.yml",
    "./pre-commit",
    "./.git",
    "rustfmt.toml"
]

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
